<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginNutricionista">

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/etCorreo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSecondaryText"
        android:textColorHint="@color/colortertiaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/etContraseña"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondaryText"
        android:textColorHint="@color/colortertiaryText"
        app:layout_constraintStart_toStartOf="@+id/etCorreo"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/botonredondo"
        android:text="@string/btnIniciar"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/etContraseña"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botonredondo"
        android:text="@string/btnCrear"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnIniciar"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="213dp"
        android:layout_height="171dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nutricionistalogo" />


</androidx.constraintlayout.widget.ConstraintLayout>